@startuml orders_purchases
title Schéma Base de Données - Commandes & Achats

entity "carts" as carts {
  *id : bigint
  *user_id : bigint
  subtotal : decimal(10,2)
  tax_amount : decimal(10,2)
  total : decimal(10,2)
  tax_rate : decimal(5,2)
  total_items : integer
  shipping_cost : decimal(10,2)
  metadata : json
  status : enum(active,abandoned,converted)
  expires_at : timestamp
  created_at : timestamp
  updated_at : timestamp
}

entity "cart_items" as cart_items {
  *id : bigint
  *cart_id : bigint
  *product_id : bigint
  quantity : integer
  unit_price : decimal(10,2)
  total_price : decimal(10,2)
  is_available : boolean
  --Offres spéciales--
  special_offer_id : bigint
  original_price : decimal(10,2)
  discount_amount : decimal(10,2)
  created_at : timestamp
  updated_at : timestamp
}

entity "orders" as orders {
  *id : bigint
  *order_number : string (unique)
  *user_id : bigint
  status : enum(pending,confirmed,preparing,shipped,delivered,cancelled,returned)
  status_history : text
  status_updated_at : timestamp
  --Adresses--
  billing_address : json
  shipping_address : json
  --Montants--
  subtotal : decimal(10,2)
  tax_amount : decimal(10,2)
  shipping_cost : decimal(10,2)
  discount_amount : decimal(10,2)
  total_amount : decimal(10,2)
  --Paiement--
  payment_method : string
  payment_status : string
  payment_transaction_id : string
  stripe_payment_intent : string
  stripe_charge_id : string
  paid_at : timestamp
  --Livraison--
  shipping_method : string
  tracking_number : string
  shipped_at : timestamp
  delivered_at : timestamp
  estimated_delivery : timestamp
  --Retours--
  return_requested : boolean
  return_processed : boolean
  return_approved : boolean
  has_non_returnable_items : boolean
  --Système--
  created_at : timestamp
  updated_at : timestamp
}

entity "order_items" as order_items {
  *id : bigint
  *order_id : bigint
  *product_id : bigint
  product_name : string
  product_sku : string
  product_description : text
  product_image : string
  product_category : json
  quantity : integer
  unit_price : decimal(10,2)
  total_price : decimal(10,2)
  tax_rate : decimal(5,2)
  status : enum(pending,confirmed,preparing,shipped,delivered,cancelled,returned)
  status_updated_at : timestamp
  --Retours--
  is_returnable : boolean
  is_returned : boolean
  return_reason : string
  return_quantity : integer
  --Offres spéciales--
  special_offer_id : bigint
  original_price : decimal(10,2)
  discount_amount : decimal(10,2)
  created_at : timestamp
  updated_at : timestamp
}

entity "order_returns" as order_returns {
  *id : bigint
  *order_id : bigint
  return_number : string (unique)
  reason : text
  status : enum(requested,approved,rejected,processed)
  admin_notes : text
  refund_amount : decimal(10,2)
  processing_fee : decimal(10,2)
  processed_at : timestamp
  created_at : timestamp
  updated_at : timestamp
}

entity "order_status_transitions" as order_status_transitions {
  *id : bigint
  *order_id : bigint
  from_status : string
  to_status : string
  reason : text
  admin_notes : text
  triggered_by : bigint
  created_at : timestamp
}

carts ||--o{ cart_items : cart_id
orders ||--o{ order_items : order_id
orders ||--o{ order_returns : order_id
orders ||--o{ order_status_transitions : order_id
@enduml
